--- a/cmd/freegeoip/public/index.html
+++ b/cmd/freegeoip/public/index.html
@@ -4,10 +4,10 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Free IP geolocation HTTP API">
+<meta name="description" content="Geolocation">
 <meta name="author" content="Alexandre Fiori">
 <link rel="icon" href="favicon.ico">
-<title>freegeoip.net</title>
+<title></title>
 <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.0/paper/bootstrap.min.css" rel="stylesheet">
 <style>
 body{
@@ -151,17 +151,5 @@ angular.module("freegeoip", [function($locationProvider) {
 
 
 </div><!-- /.container -->
-
-<script type="text/javascript">
-var _gaq = _gaq || [];
-_gaq.push(['_setAccount', 'UA-10475047-1']);
-_gaq.push(['_trackPageview']);
-
-(function() {
- var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
- ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
- var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
- })();
-</script>
 </body>
 </html>
